Fix scrollbar issue by adjusting footer positioning and margins
Removed unnecessary padding and negative margins that were causing extra
scroll space on the page. The footer now fits properly within the viewport.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,11 +10,11 @@ body {
 }
 /* Wrapper for page content to push down footer */
 #wrap {
-  padding-bottom: 50px;	
-  min-height: 100%;
+  padding-bottom: 0px;
+  min-height: calc(100% - 65px);
   height: auto;
   /* Negative indent footer by its height */
-  margin: 0 auto -65px;
+  margin: 0 auto 0;
   /* Pad bottom by footer height */
   /*padding: 0 0 60px;*/
 }
